append string format in API commit